# wallingford-bot

./: .gitignore  CLAUDE.md  README.md  base-config.yaml  maubot.yaml  pyproject.toml  spec.md
tests/fixtures/: config.py  matrix_events.py
tests/unit/: test_bot.py  test_config.py  test_db.py
wallingfordbot/: __init__.py  bot.py  config.py  db.py
